force-app/main/default/objects/Bank_Transfer__c/Bank_Transfer__c.object-meta.xml
<CustomObject>
    <label>Bank Transfer</label>
    <nameField>
        <label>Bank Transfer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Transfers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>