force-app/main/default/objects/Bank_Transfer__c/fields/Available_Balance__c.field-meta.xml
<CustomField>
    <fullName>Available_Balance__c</fullName>
    <formula>Account__r.Available_Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>