force-app/main/default/objects/Bank_Transfer__c/fields/Payout_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Payout_Bank_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payout Bank Account</label>
    <referenceTo>Payout_Bank_Account__c</referenceTo>
    <relationshipLabel>Bank Transfers</relationshipLabel>
    <relationshipName>Bank_Transfers</relationshipName>
    <type>Lookup</type>
</CustomField>