force-app/main/default/objects/Bank_Transfer__c/fields/Pending_Balance__c.field-meta.xml
<CustomField>
    <fullName>Pending_Balance__c</fullName>
    <formula>Account__r.Pending_Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pending Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>