force-app/main/default/objects/Bank_Transfer__c/fields/Transfer_Amount__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Amount__c</fullName>
    <label>Transfer Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>