force-app/main/default/objects/Bank_Transfer__c/fields/Transfer_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Date_Time__c</fullName>
    <label>Transfer Date/Time</label>
    <type>DateTime</type>
</CustomField>