force-app/main/default/objects/Bank_Transfer__c/fields/Transfer_Id__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Id__c</fullName>
    <label>Transfer Id</label>
    <length>120</length>
    <type>Text</type>
</CustomField>